Fix layout issues. usings 'flex' now.

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ html, body {
   line-height: 1.5;
   font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier;
   overflow: hidden;
+  display: flex;
 }
 
 iframe {
